# machine-learning-engineering-for-production-public

./: pyproject.toml
course1/week2-ungraded-lab/: C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
course4/week3-ungraded-labs/C4_W3_Lab_4_Github_Actions/app/: main.py
