[tool.poetry]
name = "machine-learning-engineering-for-production-public"
version = "0.1.0"
description = ""
authors = ["Saravanakumar Gopalakrishnan"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
ipykernel = "^6.23.1"
tensorflow = "^2.12.0"
tensorflow-datasets = "^4.9.2"
tfx = "^1.13.0"
keras-tuner = "^1.3.5"
protobuf = "3.20.3"
wget = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
